# nnmf-cuda

./: .gitignore  CMakeLists.txt  Doxyfile  Example_EMG_data.csv  LICENSE  README.md  nnmf_Jessica.m
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  annotated.html  classcsv__reader-members.html  classcsv__reader.html  classes.html  classmatrix-members.html  classmatrix.html  classnnmf-members.html  classnnmf.html  csv__reader_8cpp.html  csv__reader_8h.html  csv__reader_8h_source.html  csv__tester_8cpp.html  dir_3cea7a19f1845e808fae46cf291229f2.html  dir_4a4ab4ae129643df3dc94a667e11d2a7.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_980c2a994f2fc972fe445cccccb9d8f1.html  dir_a00b633439466cbb1729245c7f66f564.html  dir_ae9a93452e2a84339148a16bcf2eb561.html  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d50d4dbae6db4a4c54733102c1b2e883.html  dir_fba38f648377aa56ae5d69782adf9e53.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8cpp.html  matrix_8cpp.html  matrix_8h.html  (+7 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  functions_e.js  searchdata.js  (+19 more)
docs/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  annotated.tex  classcsv__reader.tex  classmatrix.tex  classnnmf.tex  csv__reader_8cpp.tex  csv__reader_8h.tex  csv__reader_8h_source.tex  csv__tester_8cpp.tex  dir_3cea7a19f1845e808fae46cf291229f2.tex  dir_4a4ab4ae129643df3dc94a667e11d2a7.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_63772b626f2709090f0bdca0f40827b4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_980c2a994f2fc972fe445cccccb9d8f1.tex  dir_a00b633439466cbb1729245c7f66f564.tex  dir_ae9a93452e2a84339148a16bcf2eb561.tex  dir_c184e51c84f2c3f0345bbc8a0d75d3e1.tex  dir_d28a4824dc47e487b107a5db32ef43c4.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_d50d4dbae6db4a4c54733102c1b2e883.tex  dir_fba38f648377aa56ae5d69782adf9e53.tex  files.tex  main_8cpp.tex  matrix_8cpp.tex  matrix_8h.tex  matrix_8h_source.tex  nnmf_8cpp.tex  nnmf_8h.tex  nnmf_8h_source.tex  nnmf_8m.tex  nnmf___jessica_8m.tex  refman.ilg  refman.tex
examples/: NNMF test CSV.csv  NNMF_test_CSV.csv
include/io/: csv_reader.h
include/math/: matrix.h  nnmf.h
src/: CMakeLists.txt  main.cpp
src/io/: CMakeLists.txt  csv_reader.cpp
src/math/: CMakeLists.txt  matrix.cpp  nnmf.cpp
tests/: CMakeLists.txt
tests/io/: csv_tester.cpp
tests/math/: CMakeLists.txt  matrix_transpose_test.cpp  nnmf_tester.cpp
